tests/errors/map_no_method.vt
fn main() { let m = new Map<string,int>(); m.zap(); }
